Enforce Unix LF line endings for shell scripts and update server documentation for Linux hosts